Backed out changeset 59a892814f8b (bug 1989498)

--- a/mailnews/base/prefs/content/am-offline.xhtml
+++ b/mailnews/base/prefs/content/am-offline.xhtml
@@ -56,26 +56,25 @@
       <separator class="thin" />
 
       <html:div>
-        <html:fieldset id="offline.titlebox" hidefor="pop3,none,rss">
+        <html:fieldset id="offline.titlebox" hidefor="pop3,none,rss,ews">
           <html:legend>&syncGroupTitle.label;</html:legend>
 
           <vbox>
             <checkbox
-              hidefor="pop3,nntp,none"
+              hidefor="pop3,nntp,none,ews"
               id="offline.folders"
               label="&allFoldersOffline2.label;"
               oncommand="toggleOffline()"
               accesskey="&allFoldersOffline2.accesskey;"
             />
 
-            <description hidefor="pop3,nntp,none,rss"
+            <description hidefor="pop3,nntp,none,rss,ews"
               >&allFoldersOfflineNote.label;</description
             >
 
-            <separator class="thin" hidefor="pop3,nntp,none" />
+            <separator class="thin" hidefor="pop3,nntp,none,ews" />
 
-            <hbox hidefor="pop3,nntp,none" pack="end">
-              <!-- "Imap" in names here is misleading. Also used for EWS. -->
+            <hbox hidefor="pop3,nntp,none,ews" pack="end">
               <button
                 label="&offlineImapAdvancedOffline.label;"
                 accesskey="&offlineImapAdvancedOffline.accesskey;"
@@ -100,11 +99,11 @@
 
       <html:div>
         <html:fieldset id="diskspace.titlebox">
-          <html:legend hidefor="pop3,none,rss"
+          <html:legend hidefor="pop3,none,rss,ews"
             >&diskspaceGroupTitle.label;</html:legend
           >
 
-          <description hidefor="pop3,nntp,none,rss"
+          <description hidefor="pop3,nntp,none,rss,ews"
             >&doNotDownloadImap.label;</description
           >
           <description hidefor="pop3,imap,none,rss,ews"
@@ -114,9 +113,9 @@
             >&doNotDownloadPop3Movemail.label;</description
           >
 
-          <!-- IMAP and EWS Autosync Preference -->
+          <!-- IMAP Autosync Preference -->
           <radiogroup
-            hidefor="pop3,nntp,none,rss"
+            hidefor="pop3,nntp,none,rss,ews"
             id="autosyncSelect"
             class="indent"
           >
@@ -174,11 +173,11 @@
             />
           </hbox>
 
-          <hbox align="center" class="indent" hidefor="none,rss">
+          <hbox align="center" class="indent" hidefor="none,rss,ews">
             <checkbox
               wsm_persist="true"
               id="offline.notDownload"
-              hidefor="imap,ews"
+              hidefor="imap"
               label="&offlineNotDownload.label;"
               accesskey="&offlineNotDownload.accesskey;"
               oncommand="onCheckItem('offline.notDownloadMin', [this.id]);"
@@ -186,7 +185,7 @@
             <checkbox
               wsm_persist="true"
               id="autosyncNotDownload"
-              hidefor="pop3,nntp"
+              hidefor="pop3,nntp,ews"
               label="&autosyncNotDownload.label;"
               accesskey="&autosyncNotDownload.accesskey;"
               oncommand="onAutosyncNotDownload();"
@@ -235,14 +234,14 @@
             <separator hidefor="none,rss" />
             <label
               id="retentionDescription"
-              hidefor="imap,pop3,ews"
+              hidefor="imap,pop3"
               class="desc"
               control="retention.keepMsg"
               >&retentionCleanup.label;</label
             >
             <label
               id="retentionDescriptionImap"
-              hidefor="pop3,nntp,none,rss"
+              hidefor="pop3,nntp,none,rss,ews"
               class="desc"
               control="retention.keepMsg"
               >&retentionCleanupImap.label;</label
